--- a/Style.css
+++ b/Style.css
@@ -201,7 +201,7 @@ header a:hover{
 }
 #post .container {
     width: 415px;
-    margin: 15px 10px;
+    margin: 15px 5px;
     height: 690px;
     border-radius: 1px;
     background-color: rgba(0,0,0,0.59);
@@ -214,7 +214,7 @@ header a:hover{
     transition: 1.5s ease;
 }
 #post .container2 {
-    margin: 15px 10px;
+    margin: 15px 5px;
     width: 415px;
     height: 690px;
     border-radius: 1px;
@@ -227,7 +227,7 @@ header a:hover{
     transition: 1.5s ease;
 }
 #post .container3 {
-    margin: 15px 10px;
+    margin: 15px 5px;
     width: 410px;
     height: 550px;
     border-radius: 1px;
@@ -372,7 +372,7 @@ footer a:hover {
 #nosotros {
     margin: 20px auto;
     padding: 10px 20px;
-    height: 700px;
+    height: 750px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -439,6 +439,7 @@ footer a:hover {
     display: flex;
     flex-direction: column;
 }
+/* SEPARACIÓN A Desktop */
 @media (min-width: 720px) {
 html { 
         width: 100%;
