--- a/Style.css
+++ b/Style.css
@@ -59,7 +59,7 @@ body {
     transition: .7s ease;
 }
 #titulo h1:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
     text-shadow: 2px 2px 10px orange;
     transition: .7s ease;
 }
@@ -169,7 +169,7 @@ header .logo {
     margin: 0 auto;
     font-weight: bold;
     color: orangered;
-    font-size: 2.25em;
+    font-size: 3.5rem;
     padding-bottom: 20px;
     padding-left: 15px;
     transition: .7s ease;
@@ -461,6 +461,7 @@ header .container {
 }
 header .logo{
     margin: 5px;
+    font-size: 2.25rem;
 }
 header nav {
     flex-direction: row;
